done meeting lecture 3
